...
            message = "Unknow issue"
        }
        showAlert(message: message)
    }
    
    func showAlert(message: String) {
        let cancelAction = UIAlertAction(title: "OK", style: .cancel, handler: nil)
        let alertVC = UIAlertController(title: "Error Message", message: message, preferredStyle: .alert)
        alertVC.addAction(cancelAction)
        self.present(alertVC, animated: true, completion: nil)
    }
}

...
